--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>(Chạm vào màn hình để tiếp tục)</p>
     </div>
 
-    <audio id="trollAudio" src="sound.mp3" loop></audio>
+    <audio id="trollAudio" src="moaning-sounds-during-simulation.mp3" loop></audio>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
